--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     media="screen" 
     charset="utf-8">
 </head>
-<body>
+<body class="page">
   <div class="matrix">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="matrix-img" src="./eisenhower-matrix.jpg">
     <a 
       class="matrix-inf" 
       href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -35,14 +35,14 @@
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img class="remove" src="./remove.svg"></button>
       </li>
       <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img class="remove" src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -52,7 +52,7 @@
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
         <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="delete"><img class="remove" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
